maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:32: error: value &&! is not a member of Boolean
  while (!estSurBiscuit()&&!porteBiscuit())
                         ^